<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.ui.SettingsActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbar_with_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_user"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/user_profile1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_transparent_button"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/edit_profile"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_transparent_button"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_contact_faq"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_contact_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_transparent_button"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/contact_and_faq"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_less_awesome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_less_awesome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/rounded_transparent_button"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/do_something_less_awesome"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>