<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_boom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="@string/boom"
        android:textAlignment="center"
        android:textColor="@color/md_grey_900"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_congratulations"
        android:layout_width="240dp"
        android:layout_height="225dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/congratulations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_boom" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img_token_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:civ_border_color="@color/md_grey_300"
        app:civ_border_width="1dp"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/md_grey_200"
        app:civ_shadow_radius="10"
        app:layout_constraintBottom_toBottomOf="@+id/img_congratulations"
        app:layout_constraintLeft_toLeftOf="@+id/img_congratulations"
        app:layout_constraintRight_toRightOf="@+id/img_congratulations"
        app:layout_constraintTop_toTopOf="@+id/img_congratulations" />

    <TextView
        android:id="@+id/tv_tokens_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:text="1000"
        android:textAlignment="center"
        android:textColor="@color/md_grey_900"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_congratulations" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/josefin_sans_bold"
        android:paddingBottom="16dp"
        android:text="@string/tokens_earned"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/md_grey_900"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/btn_generic_sharing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tokens_amount" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_twitter_sharing"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@color/twitter_blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_generic_sharing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_generic_sharing">

        <ImageView
            android:id="@+id/img_twitter"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/twitter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/twitter"
            android:textAllCaps="true"
            android:textColor="@color/md_white_1000"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_twitter"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_generic_sharing"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:text="@string/share"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/btn_facebook_sharing"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:background="@color/facebook_blue"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_generic_sharing"
        app:layout_constraintLeft_toRightOf="@+id/btn_generic_sharing"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="2dp"
            android:src="@drawable/facebook_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/facebook"
            android:textAllCaps="true"
            android:textColor="@color/md_white_1000"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_facebook"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>